# AI-Medical-Assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: app.py  config.py
client/components/: chatUI.py  history_download.py  upload.py
server/: logger.py  main.py  requirements.txt
server/middlewares/: exceptions_handlers.py
server/modules/: llm.py  load_vectorstore.py  pdf_handlers.py  query_handlers.py
server/modules/routes/: ask_question.py  upload_pdf.py
